--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=notentool.database.windows.net;Initial Catalog=notentool;Persist Security Info=True;User ID=notentool_admin;Password=noten_tools12"
+  } 
 }
